--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -14,7 +14,7 @@
 .w10{ width: 100% * 5 / 6 }
 .w11{ width: 100% * 11 / 12 }
 .w12{ width: 100% }
-.m1{ margin-left: 100% / 12 }
+.m1{ margin-left: 8.333333% }
 .m2{ margin-left: 100% / 6 }
 .m3{ margin-left: 25% }
 .m4{ margin-left: 100% / 3 }
