--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -2,6 +2,8 @@
 .text-left{ text-align:left !important; }
 .text-center{ text-align:center !important; }
 .text-right{ text-align:right !important; }
+.pull-left{ float:left !important; }
+.pull-right{ float:right !important; }
 .w1{ width: 100% / 12 }
 .w2{ width: 100% / 6 }
 .w3{ width: 25% }
