--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -79,6 +79,7 @@
 	width: 30px;
 	font-size:  20px;
 	font-family: monospace;
+	border-bottom-right-radius:3px;
 	font-weight: bold;
 	margin-left: -1rem;
 }
@@ -145,10 +146,10 @@
 .text-warning{ color:var(--warning); }
 .text-alert{ color:var(--alert); }
 
-.fill-info{ background-color:var(--info); }
-.fill-success{ background-color:var(--success); }
-.fill-warning{ background-color:var(--warning); }
-.fill-alert{ background-color:var(--alert); }
+.fill-info{ background-color:var(--info); color: var(--info-lighter); }
+.fill-success{ background-color:var(--success); color: var(--success-lighter); }
+.fill-warning{ background-color:var(--warning); color: var(--warning-lighter); }
+.fill-alert{ background-color:var(--alert); color: var(--alert-lighter); }
 
 .box-info button{
 	background: var(--info);
@@ -172,6 +173,13 @@
 	font-size: 75%;
 	border-radius: 3px;
 	margin:0.25rem 0.1rem;
+	font-weight:bold
+}
+.tag-info::before,
+.tag-success::before,
+.tag-warning::before,
+.tag-alert::before{
+	content: '#';
 }
 .tag-info{
 	color: white;
@@ -208,27 +216,41 @@
 	color: var(--text-base);
 	display:grid;
 	overflow:hidden;
+
+	.card_title{
+		font-weight: 100;
+		background: var(--main-color);
+		color: var(--main-text-cl);
+		width: 100%;
+		line-height: 1;
+		padding: 10px;
+		border-radius: 0 0 2px 2px;
+		box-shadow: 3px 3px 3px rgba(0,0,0,0.1);
+		font-size: 22px;
+		text-align:center;
+		margin: 0;
+		grid-row-start: 2;
+		opacity:0.85;
+	}	
+	.card_content{
+		padding: 0.5em;
+		padding-bottom: 1.5em;
+		border-left: 1px solid rgba(0,0,0,0.1);
+		border-right: 1px solid rgba(0,0,0,0.1);
+		border-top: 1px solid rgba(0,0,0,0.1);
+
+		img:first-child{
+			border-radius: 3px 3px 0 0;
+		}
+		article{
+			font-style: italic;
+			margin-top: 0.75rem;
+		}
+	}
 }
 
-.card .card_title{
-	font-weight: 100;
-	background: var(--main-color);
-	color: var(--main-text-cl);
-	width: 100%;
-	line-height: 1;
-	padding: 10px;
-	border-radius: 2px;
-	box-shadow: 3px 3px 3px rgba(0,0,0,0.1);
-	font-size: 22px;
-	text-align:center;
-	margin: 0;
-	grid-row-start: 2;
-	opacity:0.85;
-}
-.card .card_content{
-	padding: 0.5em;
-	padding-bottom: 1.5em;
-}
+
+
 
 
 
@@ -248,6 +270,8 @@
 	z-index: 2000000001;
 	left: 50%;
 	top: 50%;
+	width:85%;
+	max-height:85%;
 	transform: translate( -50%, -50% );
 	border-radius: 3px;
 	background: var(--background-base);
@@ -270,6 +294,7 @@
 	padding-left: 10px;
 	text-transform: capitalize;
 	font-weight:bold;
+	cursor:default;
 }
 .pwa_dialog_topBtns{
 
@@ -282,6 +307,11 @@
 	line-height: 50px;
 	background: var(--background-base-darker);
 	border-bottom-left-radius: 20px;
+	cursor:pointer;
+
+	&::after{
+		content: '×';
+	}
 }
 .pwa_dialog_topCross:active{
 	background: var(--background-base);
